--- a/front-end/styles/index.css
+++ b/front-end/styles/index.css
@@ -3,25 +3,40 @@
   src: url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap") format("woff2");
   font-family: "Montserrat-title";
 }
-body {
+
+* {
   margin: 0;
   padding: 0;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
-.head_container {
+.header_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
-.logo {
+.flex-center {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.fa-shopping-cart {
+.list-style {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
 }
 
+.a-link {
+  text-decoration: none;
+  color: black;
+}
 /*# sourceMappingURL=index.css.map */
