--- a/front-end/styles/index.css
+++ b/front-end/styles/index.css
@@ -10,6 +10,18 @@
   font-family: 'Montserrat', sans-serif;
 }
 
+*,
+::before ::after {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  padding: 20px;
+}
+
 .header_container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -17,9 +29,16 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.flex-center {
+.main_container {
+  padding: 50px 0px;
+}
+
+.center-flex {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -38,5 +57,111 @@
 .a-link {
   text-decoration: none;
   color: black;
+}
+
+main .products-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-item-align: center;
+      align-self: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-bottom: 70px;
+}
+
+main .products-container h3 {
+  font-family: "Montserrat";
+  font-size: 40px;
+  margin-bottom: 50px;
+  text-align: center;
+}
+
+main .products-container .products {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-item-align: center;
+      align-self: center;
+  margin: 0 5%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  -ms-grid-rows: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+  grid-gap: 30px;
+  max-width: 1700px;
+}
+
+main .products-container .products .product {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+  height: 100%;
+  background: #e1bb80;
+  border-radius: 20px 20px 20px 20px;
+  -webkit-box-shadow: 0px 0px 10px 0px rgba(63, 63, 63, 0.49);
+          box-shadow: 0px 0px 10px 0px rgba(63, 63, 63, 0.49);
+}
+
+main .products-container .products .product:hover {
+  -webkit-transform: scale(1.03, 1.03);
+          transform: scale(1.03, 1.03);
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+  opacity: 0.9;
+}
+
+main .products-container .products .product__img {
+  width: 100%;
+  height: 100%;
+  background: coral;
+  border-radius: 20px 20px 0 0;
+}
+
+main .products-container .products .product__img img {
+  border-radius: 20px;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+main .products-container .products .product__infos {
+  position: absolute;
+  bottom: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 20%;
+  width: 100%;
+  background: #3e3e40;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  font-size: 65%;
+  border-radius: 0 0 20px 20px;
+  color: #dee9f7;
 }
 /*# sourceMappingURL=index.css.map */
