--- a/front-end/styles/index.scss
+++ b/front-end/styles/index.scss
@@ -7,6 +7,14 @@
     font-family: "Montserrat-title";
 }
 
+@mixin flex-center() {
+    display: flex;
+    justify-content: center;
+    align-self: center;
+}
+
+$primary-color: #252526;
+$text-color: #dee9f7;
 
 * {
     margin: 0;
@@ -14,12 +22,30 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+
+*,
+::before ::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  padding: 20px;
+}
+
+
 .header_container {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
-.flex-center {
+.main_container {
+  padding: 50px 0px;
+}
+
+.center-flex {
     display: flex;
     align-items: center;
 }
@@ -33,3 +59,72 @@
     text-decoration: none;
     color: black;
 }
+
+  main {
+    .products-container {
+      @include flex-center;
+      flex-direction: column;
+      padding-bottom: 70px;
+  
+      h3 {
+        font-family: "Montserrat";
+        font-size: 40px;
+        margin-bottom: 50px;
+        text-align: center;
+      }
+      .products {
+        @include flex-center;
+        margin: 0 5%;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-gap: 30px;
+        max-width: 1700px;
+        .product {
+          position: relative;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          width: 100%;
+          height: 100%;
+          background: $secondary-color;
+          border-radius: 20px 20px 20px 20px;
+          box-shadow: 0px 0px 10px 0px rgba(63, 63, 63, 0.49);
+          &:hover {
+            transform: scale(1.03, 1.03);
+            transition: 0.3s ease;
+            opacity: 0.9;
+          }
+  
+          &__img {
+            width: 100%;
+            height: 100%;
+            background: coral;
+            border-radius: 20px 20px 0 0;
+  
+            & img {
+              border-radius: 20px;
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+            }
+          }
+          &__infos {
+            position: absolute;
+            bottom: 0;
+            display: flex;
+            align-items: center;
+            height: 20%;
+            width: 100%;
+            background: lighten($primary-color, 10%);
+            display: flex;
+            justify-content: space-around;
+            font-size: 65%;
+            border-radius: 0 0 20px 20px;
+            color: $text-color;
+          }
+        }
+      }
+    }
+  }
+  
