--- a/front-end/styles/index.css
+++ b/front-end/styles/index.css
@@ -57,6 +57,7 @@ body {
 .a-link {
   text-decoration: none;
   color: black;
+  padding-right: 10px;
 }
 
 main .products-container {
@@ -116,7 +117,6 @@ main .products-container .products .product {
           justify-content: space-between;
   width: 100%;
   height: 100%;
-  background: #e1bb80;
   border-radius: 20px 20px 20px 20px;
   -webkit-box-shadow: 0px 0px 10px 0px rgba(63, 63, 63, 0.49);
           box-shadow: 0px 0px 10px 0px rgba(63, 63, 63, 0.49);
