--- a/front-end/styles/index.scss
+++ b/front-end/styles/index.scss
@@ -58,6 +58,7 @@ body {
 .a-link {
     text-decoration: none;
     color: black;
+    padding-right: 10px ;
 }
 
   main {
@@ -87,7 +88,6 @@ body {
           justify-content: space-between;
           width: 100%;
           height: 100%;
-          background: $secondary-color;
           border-radius: 20px 20px 20px 20px;
           box-shadow: 0px 0px 10px 0px rgba(63, 63, 63, 0.49);
           &:hover {
