--- a/front-end/styles/cart.css
+++ b/front-end/styles/cart.css
@@ -1,1 +1,251 @@
-/* No CSS *//*# sourceMappingURL=cart.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
+@font-face {
+  src: url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap") format("woff2");
+  font-family: "Montserrat-title";
+}
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Montserrat", sans-serif;
+}
+
+*,
+::before ::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  padding: 20px;
+}
+
+.header_container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.main_container {
+  padding: 50px 0px;
+}
+
+.center-flex {
+  display: flex;
+  align-items: center;
+}
+
+.list-style {
+  list-style: none;
+  display: flex;
+}
+
+.a-link {
+  text-decoration: none;
+  color: black;
+  padding-right: 10px;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  width: 100%;
+}
+.container .cart-card {
+  overflow: hidden;
+  margin: 50px 15px;
+  display: none;
+  width: 600px;
+  background: #dee9f7;
+  border-radius: 20px 20px 20px 20px;
+  box-shadow: 0px 0px 10px 0px rgba(63, 63, 63, 0.49);
+}
+.container .cart-card .cart {
+  margin-left: 10px;
+}
+.container .cart-card__recap {
+  margin: 10px 0 10px 10px;
+  width: 90%;
+  background: #dee9f7;
+}
+.container .cart-card__recap__row {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.container .cart-card__recap .first-line {
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  font-size: 19px;
+  text-decoration: underline;
+}
+.container .cart-card__recap__title {
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  width: 120px;
+  height: 30px;
+  font-weight: bold;
+}
+.container .cart-card__recap__data {
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  width: 120px;
+  margin: 2px 0;
+  height: 30px;
+}
+.container .cart-card__recap__data .fa-trash:hover {
+  cursor: pointer;
+  opacity: 0.7;
+  font-size: 17px;
+  transition: 0.3s;
+}
+.container .cart-card__recap .cart-card__form__button {
+  margin: 5px 0;
+  width: 130px;
+  padding: 20px;
+  border-radius: 5px;
+  border: solid 1px #252526;
+}
+.container .cart-card__form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #252526;
+  height: 100%;
+}
+.container .cart-card__form .form {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: stretch;
+}
+.container .cart-card__form .name-and-lastname {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.container .cart-card__form .postal-and-city {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.container .cart-card__form .cart-card__form-line {
+  margin: 5px 0px;
+}
+.container .cart-card__form .cart-card__form-line label {
+  display: none;
+}
+.container .cart-card__form .cart-card__form-line {
+  width: 100%;
+  max-width: 300px;
+}
+.container .cart-card__form #bloc__phone {
+  width: 100%;
+}
+.container .cart-card__form #bloc__mail {
+  width: 100%;
+}
+.container .cart-card__form #bloc__mail input[type=text] {
+  margin: 10px;
+}
+.container .cart-card__form #bloc__mail #bloc__adress {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+.container .cart-card__form__buttons {
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+}
+.container .cart-card__form__quantity {
+  margin-bottom: 20px;
+}
+.container .cart-card__form__color {
+  margin-bottom: 40px;
+}
+.container .cart-card__form .cart-card__form__button {
+  padding: 20px;
+  border-radius: 5px;
+  border: solid 1px #252526;
+}
+.container .cart-card__form .erreur {
+  padding: 5px 0;
+  color: red;
+}
+.container .cart-card__form .to-pay {
+  font-family: Josefin Sans;
+  font-size: 18px;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  align-self: center;
+}
+.container .cart-card__form .to-pay:hover {
+  cursor: pointer;
+  opacity: 0.8;
+}
+.container .if-empty-cart {
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  height: 82vh;
+}
+.container .if-empty-cart h2 {
+  margin-top: 210px;
+}
+.container .if-empty-cart h2 a {
+  color: black;
+  text-decoration: underline;
+}
+.container .total {
+  margin-bottom: 0;
+}
+
+.title-quantity {
+  display: flex;
+  justify-content: center;
+  align-self: center;
+}
+
+.title-remove {
+  display: flex;
+  justify-content: center;
+  align-self: center;
+}
+
+.data-bin {
+  display: flex;
+  justify-content: center;
+  align-self: center;
+}
+
+.data-quantity {
+  display: flex;
+  justify-content: center;
+  align-self: center;
+}
+
+.width-to-empty-cart {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+.width-to-empty-cart .to-empty-cart {
+  display: flex;
+  justify-content: center;
+  align-self: center;
+}
+.width-to-empty-cart .to-empty-cart:hover {
+  cursor: pointer;
+  opacity: 0.8;
+}
+
+/*# sourceMappingURL=cart.css.map */
